add auto open of window on search

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -555,6 +555,10 @@ p {
 /* ==============================================================
   RESPONSIVE SLIDER
   =============================================================== */
+.slider-container,
+.slider-container * {
+  outline: none;
+}
 
 .slider-container {
   margin: 0 auto;
