--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -77,7 +77,7 @@ position: relative;
 
 .businessName {
     font-family: 'Roboto', sans-serif;
-    font-size: 16pt;
+    font-size: 1em;
     margin-bottom: 5px;
 }
 
@@ -88,15 +88,17 @@ position: relative;
         height: 50px;
         text-align: center;
         margin: 0 10px;
-        font-size: 17px;
         background: #ff7474;
         color: #fff;
         padding: 12px;
         border-radius: 100%;
      }
 
-
 .check-in-status {
+    margin-top: 5px;
+    padding: 3px 8px;
+    border: 1px solid #999;
+    border-radius: 5px;
     display: none;
     float: left;
     width: 100%;
