--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -83,28 +83,37 @@ position: relative;
 
 .rating {
         position: absolute;
-        right: 0px;
-        bottom: 50px;
-        height: 50px;
+        font-size: .85em;
+        right: 5px;
+        top: 25px;
+        width: 30px;
+        height: 30px;
         text-align: center;
         margin: 0 10px;
         background: #ff7474;
         color: #fff;
-        padding: 12px;
+        padding: 7px 0;
         border-radius: 100%;
      }
 
+.address { width: 80%;
+    display: block;
+    clear: both;
+}
+
 .check-in-status {
     margin-top: 5px;
-    padding: 3px 8px;
-    border: 1px solid #999;
+    padding: 10px 10px;
+    border: 1px solid #CDCDCD;
     border-radius: 5px;
     display: none;
     float: left;
     width: 100%;
 }
 
-.check-in-status span { 
+.check-in-status span {
+    text-align: center; 
+    font-weight: bold;
     width: 100%; 
     clear: both; 
     display: block; }
@@ -128,13 +137,16 @@ position: relative;
 
 .check-in-status a {
     cursor: pointer;
-    background: orange;
+    display: inline-block;
+    background: white;
     color: white;
+    border: 1px solid #ccc;
     border-radius: 3px;
     width: 100%;
     float: left;
-    padding: 10px;
-    min-width: 10px;
+    width: 50px;
+    padding: 14px 0px;
+    min-width: 40px;
     border-radius: 1000px;
 }
 
