--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1114,3 +1114,68 @@ footer {
 #members .container {
   min-width: 100%;
 }
+
+
+        .error-message { 
+            padding: 30px; 
+            border: #ff0000 solid 1px;
+            border-radius: 6px;
+        }
+
+        #add-listing label { display: none;  }
+        #add-listing input { margin: 0 0 19px 0; height: 45px; }
+        #add-listing h4 { margin: 0 0 20px 0; }
+        #add-listing h6 { margin: 0 0 20px 0; }
+
+        #business-type,
+        #amenities { border: 1px solid #CCC; 
+            width: 99%;
+            margin: 0 auto 20px;
+            padding: 20px 0 20px 0;
+            border-radius: 5px;
+        }
+
+        #business-type label,
+        #amenities label {
+            position: relative;
+            display: inline-block;
+            width: auto;
+            margin: 0;
+            padding: 0 30px 0 25px;
+            
+        }
+        #business-type input,
+        #amenities input {
+            position: absolute;
+            float: left;
+            left: 0px;
+            top: -11px;
+            padding: 10px;
+        } 
+        /* Style for the invalid fields */
+        input:invalid{
+          border-color: #900;
+          background-color: #FDD;
+        }
+
+        input:focus:invalid {
+          outline: none;
+        }
+
+        /* Style of our error messages */
+        .error {
+          width  : 100%;
+          padding: 0;
+
+          font-size: 80%;
+          color: blue;
+          background-color: #900;
+          border-radius: 0 0 5px 5px;
+
+          -moz-box-sizing: border-box;
+          box-sizing: border-box;
+        }
+
+        .error.active {
+          padding: 0.3em;
+        }
