--- a/assets/css/results-style.css
+++ b/assets/css/results-style.css
@@ -2,7 +2,8 @@
    GLOBAL STYLES
    ============================================================== */
 body {
-  font-family: 'Roboto', sans-serif; 
+  font-family: 'Roboto', sans-serif;
+  background-color: grey;
 }
 
 h1 {
@@ -52,20 +53,22 @@ p {
   font-size: 15px; }
 
 .main-block {
+  margin-top: 200px;
   padding: 90px 0; }
   @media (max-width: 768px) {
     .main-block {
       padding: 45px 0; } }
 
-.light-bg {
-  background: #f3f4f7; }
+/* .light-bg {
+  background: #f3f4f7; } */
 
 .dark-bg {
   background: #414141; }
 
 /* ==============================================================
    HEADER
-   ============================================================== */
+============================================================== */
+
 .nav-menu {
   position: absolute;
   z-index: 1;
@@ -90,12 +93,6 @@ p {
   .navbar-light .navbar-brand:hover {
     color: #fff; }
 
-    @media (max-width: 768px) {
-      .navbar-light .navbar-nav {
-        padding: 15px;
-        margin-top: 25px;
-      }
-    }
 .navbar-light .navbar-nav .show > .nav-link {
   color: #fff;
   font-weight: bold; }
@@ -111,49 +108,7 @@ p {
   .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
     color: #fff;
     outline: none; }
-
-@media (max-width: 768px) {
-
-  .navbar-light .navbar-toggler {
-    position: absolute;
-    transition: all .09s linear;
-    right: 15px;
-    top: 14px;
-    display: inline-block;
-    height: 30px;
-    width: 30px;
-    outline: none;
-    border: none;
-  }
-
-  .navbar-light .navbar-toggler .line1,
-  .navbar-light .navbar-toggler .line2,
-  .navbar-light .navbar-toggler .line3 {
-    transition: all .09s linear;
-    display: inline-block;
-    height: 1px;
-    width: 30px;
-    background: #FFF;
-    position: absolute;
-    left: 0px;
-    
-  }
-  .navbar-light .navbar-toggler .line1 { top: 5px; }
-  .navbar-light .navbar-toggler .line2 { top: 15px; }
-  .navbar-light .navbar-toggler .line3 { top: 25px; }
-
-  .navbar-light .navbar-toggler.open .line1 {
-    transform: rotate(45deg);
-    top: 17px;
-  }
-  .navbar-light .navbar-toggler.open .line2 { opacity: 0; }
-  .navbar-light .navbar-toggler.open .line3 { 
-    top: 17px; 
-    transform: rotate(-45deg);
-  }
   
-}
-
 #rimotLogo { 
   position: absolute;
   top: 15px;
@@ -173,12 +128,12 @@ p {
   background: rgba(37,42,51,0.9);
   opacity: 1; }
 
-.transition {
+/* .transition {
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   -o-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out; 
-}
+} */
 
 .fixed {
   -webkit-transition: all 0.5s ease-in-out;
@@ -209,13 +164,7 @@ p {
   font-size: 14px;
   padding: 0 8px 0 0; }
 
-.slider {
-  background: url(../images/slider.jpg) no-repeat;
-  background-size: cover;
-  min-height: 800px; }
-  @media (max-width: 992px) {
-    .slider {
-      min-height: 700px; } }
+
 
 .btn-outline-light {
   padding: 10px 16px; }
@@ -339,7 +288,7 @@ p {
 
 /* ==============================================================
    FEATURED PLACES
-   ============================================================== */
+============================================================== */
 
 .featured-responsive {
   padding: 0 10px 0 10px;
@@ -347,6 +296,8 @@ p {
    
 .featured-place-wrap {
   background: #fff;
+  width: 550px;
+  height: 550px;
   margin: 0 0 30px;
   -webkit-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
@@ -480,7 +431,7 @@ p {
 
 /* ==============================================================
    CATEGORIES
-   ============================================================== */
+============================================================== */
 
 @media (max-width: 992px) {
   .category-responsive {
@@ -594,6 +545,7 @@ p {
    DETAIL PAGE
    ============================================================== */
 .detail-filter-wrap {
+  margin-top: 50px;
   padding: 17px 0;
   border-bottom: 1px solid #e7e7e7; }
   .detail-filter-wrap p {
@@ -676,33 +628,6 @@ p {
     /* ==============================================================
    FOOTER
    ============================================================== */
-footer {
-  position: relative; }
-
-.copyright {
-  text-align: center; }
-  .copyright p {
-    font-size: 18px;
-    font-weight: 400;
-    color: #ccc;
-    margin: 0; }
-  .copyright ul {
-    margin: 25px 0 0;
-    padding: 0; }
-    .copyright ul li {
-      list-style: none;
-      display: inline-block; }
-      .copyright ul li a {
-        color: #ccc;
-        font-size: 22px;
-        padding: 0 10px;
-        opacity: 0.6;
-        -webkit-transition: 0.3s;
-        -o-transition: 0.3s;
-        transition: 0.3s; }
-        .copyright ul li a:hover {
-          opacity: 1;
-          text-decoration: none; }
 
 
 /* Search  NAV Bar CSS */
