--- a/assets/css/map.css
+++ b/assets/css/map.css
@@ -3,8 +3,15 @@
 }
 .Logo { float: left; color: #FFF; width: 100%; margin: 16px 0 0 30px; max-width: 115px; }
 
+.main-container { float: left; 
+    width: 100%;
+    height: 100%;
+    overflow: hiddent;
+    padding-top: 62px;
+}
+
 #map {
-margin-top: 62px;
+margin: 0px;
 height: 100%;
 z-index: 1;
 width: 100%;
